# multi_agent_1

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt  run.py
docs/: PRD-私人消息流推送助手.md  TECH-私人消息流推送助手.md  archive.html  index.html
docs/papers/: 2026-05-25.html  2026-05-26.html  2026-05-27.html  2026-05-28.html  2026-05-29.html  2026-05-30.html  2026-05-31.html
src/app/: __init__.py  config.py  dedup.py  models.py  pipeline.py  weather.py
src/app/agent/: __init__.py  minimax_client.py
src/app/digest/: __init__.py  agent.py  render.py  template.py
src/app/filter/: __init__.py  agent.py  rule.py
src/app/push/: __init__.py  bark.py  base.py  email.py  msgraph.py  webpaper.py  wecom.py
src/app/sources/: __init__.py  api.py  arxiv.py  base.py  crawler.py  rss.py
src/app/web/: __init__.py  paper.py  publish.py
tests/: __init__.py  test_agent_minimax.py  test_arxiv_live.py  test_config.py  test_dedup.py  test_digest.py  test_filter.py  test_models.py  test_pipeline.py  test_push.py  test_sources.py  test_webpaper.py
