[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digest-assistant"
version = "0.1.0"
description = "私人消息流推送助手 - 多源聚合、过滤、早报生成与推送"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "feedparser",
    "httpx",
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
